[Refactor Codes] xml 수정

--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -74,7 +74,7 @@
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="-2sp"
-                    android:text="몽그리"
+                    android:text=""
                     android:textColor="#565656"
                     android:textSize="17sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +92,7 @@
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="1sp"
-                    android:text="감성자극"
+                    android:text=""
                     android:textColor="#a7a7a7"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +111,7 @@
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="5sp"
-                    android:text="저는 몽글의 몽글몽글한 마스코트인  몽글이에요:):)"
+                    android:text=""
                     android:textColor="#bcbcbc"
                     android:textSize="13sp"
                     app:layout_constraintBottom_toBottomOf="parent"
