--- a/app/src/main/res/layout/item_library_sentence_click.xml
+++ b/app/src/main/res/layout/item_library_sentence_click.xml
@@ -26,7 +26,7 @@
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="2sp"
             android:singleLine="true"
-            android:text="번아웃을 극복하고 싶을 때 봐야하는 문장"
+            android:text=""
             android:textColor="#bcbcbc"
             android:textSize="13sp"
             app:layout_constraintBottom_toTopOf="@id/tv_library_sentence_sentence"
@@ -46,7 +46,7 @@
             android:includeFontPadding="false"
             android:letterSpacing="-0.02"
             android:maxLines="2"
-            android:text="결국 봄이 언제나 찾아왔지만, 하마터면 오지 않을 뻔 했던 봄을 생각하면 마음이 섬찟해진다. "
+            android:text=""
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@id/img_item_library_sentence_usermark"
@@ -134,7 +134,7 @@
             android:fontFamily="@font/notosanscjkkr_regular"
             android:includeFontPadding="false"
             android:textColor="@color/very_light_pink_two"
-            android:text="예스리"
+            android:text=""
             app:layout_constraintBottom_toBottomOf="@id/img_item_library_sentence_usermark"
             app:layout_constraintStart_toEndOf="@id/img_item_library_sentence_usermark"
             app:layout_constraintTop_toTopOf="@id/img_item_library_sentence_usermark" />
