--- a/app/src/main/res/layout/item_library_thema.xml
+++ b/app/src/main/res/layout/item_library_thema.xml
@@ -36,7 +36,7 @@
             android:includeFontPadding="false"
             android:letterSpacing="-0.02"
             android:maxLines="2"
-            android:text="번아웃을 극복하기 위해 봐야하는 문장"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
             android:includeFontPadding="false"
             android:letterSpacing="0.02"
             android:lineSpacingExtra="1sp"
-            android:text="107"
+            android:text=""
             android:textColor="#bcbcbc"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@id/img_bookmark"
@@ -111,7 +111,7 @@
             android:includeFontPadding="false"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="1sp"
-            android:text="15"
+            android:text=""
             android:textColor="#bcbcbc"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@id/img_bookmark"
