--- a/app/src/main/res/layout/item_search_sentence.xml
+++ b/app/src/main/res/layout/item_search_sentence.xml
@@ -30,7 +30,7 @@
             app:layout_constraintEnd_toStartOf="@+id/search_sentence_guide_right"
             app:layout_constraintStart_toStartOf="@id/cl_search_sentence"
             app:layout_constraintTop_toTopOf="@id/cl_search_sentence"
-            tools:text="번아웃을 극복하고 싶을 때 봐야하는 문장" />
+            tools:text="" />
 
         <TextView
             android:id="@+id/search_sentence_tv_sentence"
@@ -47,7 +47,7 @@
             app:layout_constraintEnd_toEndOf="@id/search_sentence_guide_right"
             app:layout_constraintStart_toStartOf="@+id/search_sentence_tv_themename"
             app:layout_constraintTop_toBottomOf="@+id/search_sentence_tv_themename"
-            tools:text="결국 봄이 언제나 찾아왔지만, 하마터면 오지 않을 뻔 했던 봄을 생각하면 마음이 섬찟해진다. " />
+            tools:text="" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/search_sentence_guide_right"
@@ -81,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:text="예스뤼"
+            android:text=""
             android:textSize="12sp"
             android:textColor="@color/very_light_pink_two"
             android:letterSpacing="-0.02"
