--- a/app/src/main/res/layout/custom_library_tab.xml
+++ b/app/src/main/res/layout/custom_library_tab.xml
@@ -16,7 +16,7 @@
         android:fontFamily="@font/notosanscjkkr_demilight"
         android:includeFontPadding="false"
         android:letterSpacing="-0.02"
-        android:text="47"
+        android:text=""
         android:textColor="@color/selector_library_tab_click"
         android:textSize="29sp"
         app:layout_constraintBottom_toTopOf="@+id/library_thema"
@@ -63,7 +63,7 @@
         android:layout_marginEnd="50dp"
         android:fontFamily="@font/notosanscjkkr_demilight"
         android:includeFontPadding="false"
-        android:text="36"
+        android:text=""
         android:textColor="@color/selector_library_tab_click"
         android:textSize="29sp"
         app:layout_constraintEnd_toStartOf="@+id/line2"
@@ -103,7 +103,7 @@
         android:layout_marginEnd="54dp"
         android:fontFamily="@font/notosanscjkkr_demilight"
         android:includeFontPadding="false"
-        android:text="23"
+        android:text=""
         android:textColor="@color/selector_library_tab_click"
         android:textSize="29sp"
         app:layout_constraintEnd_toEndOf="parent"
