--- a/app/src/main/res/layout/custom_library_tab_basic.xml
+++ b/app/src/main/res/layout/custom_library_tab_basic.xml
@@ -8,7 +8,7 @@
         android:id="@+id/library_tab_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="47"
+        android:text=""
         android:textColor="@color/selector_library_tab_click"
         android:textSize="29sp"
         android:letterSpacing="-0.02"
