--- a/app/src/main/res/layout/item_library_curator.xml
+++ b/app/src/main/res/layout/item_library_curator.xml
@@ -32,7 +32,7 @@
             app:layout_constraintBottom_toBottomOf="@id/cl_library_curator"
             app:layout_constraintStart_toStartOf="@id/cl_library_curator"
             app:layout_constraintTop_toTopOf="@id/cl_library_curator"
-            tools:src="@tools:sample/avatars" />
+            />
 
         <TextView
             android:id="@+id/tv_library_curator_name"
@@ -45,7 +45,7 @@
             android:includeFontPadding="false"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="-1sp"
-            android:text="예스리"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/library_curator_img_profile"
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="1sp"
-            android:text="540"
+            android:text=""
             android:fontFamily="@font/notosanscjkkr_demilight"
             android:includeFontPadding="false"
             android:textColor="@color/very_light_pink_two"
@@ -104,7 +104,7 @@
             android:layout_marginTop="5dp"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="3sp"
-            android:text="대학내일"
+            android:text=""
             android:fontFamily="@font/notosanscjkkr_demilight"
             android:includeFontPadding="false"
             android:textColor="@color/very_light_pink_two"
