--- a/app/src/main/res/layout/item_search_theme.xml
+++ b/app/src/main/res/layout/item_search_theme.xml
@@ -35,8 +35,7 @@
             android:fontFamily="@font/notosanscjkkr_demilight"
             android:includeFontPadding="false"
             android:letterSpacing="-0.02"
-            android:text="삶에 지쳐 위태롭고 비틀거릴 때, 누군가에게
-기대고만 싶을 때 보면 좋은 문장"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/search_theme_guide_right"
@@ -64,7 +63,7 @@
             android:lineSpacingExtra="1sp"
             android:fontFamily="@font/notosanscjkkr_demilight"
             android:includeFontPadding="false"
-            android:text="107"
+            android:text=""
             android:textColor="#bcbcbc"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView5"
@@ -105,7 +104,7 @@
             android:lineSpacingExtra="1sp"
             android:fontFamily="@font/notosanscjkkr_demilight"
             android:includeFontPadding="false"
-            android:text="15"
+            android:text=""
             android:textColor="#bcbcbc"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView12"
