--- a/app/src/main/res/layout/item_detail_theme.xml
+++ b/app/src/main/res/layout/item_detail_theme.xml
@@ -18,7 +18,7 @@
         android:includeFontPadding="false"
         android:letterSpacing="-0.02"
         android:maxLines="2"
-        android:text="영 영앤 리치 남자를 만나자\n감 감사하자"
+        android:text="   "
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:includeFontPadding="false"
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="0sp"
-        android:text="몽글이 몽글몽글"
+        android:text="  "
         android:textColor="#a7a7a7"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
@@ -59,7 +59,7 @@
         android:layout_marginEnd="16dp"
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="1sp"
-        android:text="100"
+        android:text="  "
         android:textColor="#a7a7a7"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView10"
@@ -92,7 +92,7 @@
         android:layout_height="wrap_content"
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="1sp"
-        android:text="100"
+        android:text="  "
         android:textColor="#a7a7a7"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView48"
