--- a/app/src/main/res/layout/activity_sentence_detail_view.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_view.xml
@@ -36,15 +36,27 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="31dp"
+        android:breakStrategy="simple"
         android:fontFamily="@font/notosanscjkkr_regular"
         android:includeFontPadding="false"
         android:letterSpacing="-0.02"
-        android:text="Title"
+        android:text=" "
         android:textColor="@color/white"
         android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView53"
+        android:layout_width="0dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="25dp"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_theme"
+        app:srcCompat="@drawable/background_detail_sentence_rounded" />
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll"
@@ -92,22 +104,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="11dp"
+                android:breakStrategy="simple"
                 android:fontFamily="@font/notosanscjkkr_demilight"
                 android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="3sp"
                 android:maxLength="280"
-                android:text="처음 마주할 때의 인상, 사소한 것으로 인해 생기
-는 호감, 알아가면서 느끼는 다양한 감정과 머금
-고있는 풍경과 분위기까지. 처음 마주할 때의 인
-상, 사소한 것으로 인해 생기는 호감, 알아가면서
-느끼는 다양한 감정과 머금고있는 풍경과 분위기
-까지. 처음 마주할 때의 인상, 사소한 것으로 인해
-생기는 호감, 알아가면서 느끼는 다양한 감정과
-머금고있는 풍경과 분위기까지. 처음 마주할 때
-의 인상, 사소한 것으로 인해 생기는 호감, 알아가
-면서 느끼는 다양한 감정과 머금고있는 풍경과
-분위기까지. 가나다라 마바사"
+                android:text=" "
                 android:textColor="@color/black"
                 android:textSize="17sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -141,7 +144,7 @@
                 android:layout_marginStart="8dp"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="-1sp"
-                android:text="몽글이"
+                android:text=" "
                 android:textColor="#a7a7a7"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView18"
@@ -202,7 +205,7 @@
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="7sp"
                     android:singleLine="true"
-                    android:text="오체불만족"
+                    android:text=" "
                     android:textColor="@color/black"
                     android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -225,7 +228,7 @@
                     android:layout_marginStart="11dp"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="6sp"
-                    android:text="이예슬"
+                    android:text=" "
                     android:textColor="@color/black"
                     android:textSize="13sp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView21"
@@ -248,7 +251,7 @@
                     android:layout_marginStart="11dp"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="6sp"
-                    android:text="몽글하우스"
+                    android:text=" "
                     android:textColor="@color/black"
                     android:textSize="13sp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView22"
@@ -440,6 +443,16 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+    <ImageView
+        android:id="@+id/imageView54"
+        android:layout_width="0dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="43dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_theme"
+        app:srcCompat="@drawable/top_blur" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/sentence_detail_cl_bottom"
