--- a/app/src/main/res/layout/item_theme_sentence.xml
+++ b/app/src/main/res/layout/item_theme_sentence.xml
@@ -17,7 +17,7 @@
         android:includeFontPadding="false"
         android:letterSpacing="-0.02"
         android:maxLines="2"
-        android:text="영 영앤 리치 남자를 만나자\n감 감사하자"
+        android:text="  "
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
         android:includeFontPadding="false"
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="0sp"
-        android:text="몽글이 몽글몽글"
+        android:text="  "
         android:textColor="#a7a7a7"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
@@ -68,7 +68,7 @@
         android:layout_marginEnd="10dp"
         android:letterSpacing="0.02"
         android:lineSpacingExtra="2sp"
-        android:text="100"
+        android:text="  "
         android:textColor="#a7a7a7"
         android:textSize="13sp"
         android:textStyle="normal"
@@ -94,7 +94,7 @@
         android:layout_marginEnd="16dp"
         android:letterSpacing="0.02"
         android:lineSpacingExtra="2sp"
-        android:text="30"
+        android:text="  "
         android:textColor="#a7a7a7"
         android:textSize="13sp"
         android:textStyle="normal"
