--- a/app/src/main/res/layout/activity_detail_theme.xml
+++ b/app/src/main/res/layout/activity_detail_theme.xml
@@ -50,6 +50,7 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginTop="46dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/theme_img_profile"
         app:layout_constraintStart_toStartOf="@+id/tv_main_theme_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_main_theme_title" />
