--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -24,11 +24,12 @@
         android:id="@+id/img_back_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/btn_back"
         android:layout_marginLeft="1dp"
-        android:paddingEnd="23dp"
+        android:layout_marginTop="4dp"
         android:paddingTop="16dp"
+        android:paddingEnd="23dp"
         android:paddingBottom="16dp"
+        android:src="@drawable/btn_back"
         app:layout_constraintBottom_toBottomOf="@id/tv_setting"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -39,13 +40,13 @@
         android:id="@+id/tv_personal_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:letterSpacing="-0.04"
         android:text="개인 정보"
         android:textColor="#838383"
         android:textSize="15sp"
-        android:letterSpacing="-0.04"
-        android:layout_marginTop="39dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_setting" />
+        app:layout_constraintTop_toBottomOf="@+id/img_back_setting" />
 
     <LinearLayout
         android:id="@+id/profile_change"
@@ -335,10 +336,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="서비스 이용 약관"
-            android:textSize="17sp"
+            android:letterSpacing="-0.04"
+            android:text="서비스 이용약관"
             android:textColor="@color/black_two"
-            android:letterSpacing="-0.04"/>
+            android:textSize="17sp" />
 
         <ImageView
             android:layout_width="wrap_content"
