[Implement Features] 빌드 오류 수정

--- a/app/src/main/res/layout/activity_curator_keyword.xml
+++ b/app/src/main/res/layout/activity_curator_keyword.xml
@@ -10,7 +10,7 @@
         android:id="@+id/activity_curator_keyword_topbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/activity_join_step2_sv"
+        app:layout_constraintBottom_toTopOf="@+id/rv_curator_keyword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
