--- a/app/src/main/res/layout/item_today_sentence.xml
+++ b/app/src/main/res/layout/item_today_sentence.xml
@@ -9,7 +9,7 @@
         android:id="@+id/constraintLayout4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/shadow_232538"
+        android:background="@drawable/shadow_212312"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,9 +24,11 @@
 
         <TextView
             android:id="@+id/tv_today_sentence"
-            android:layout_width="265dp"
-            android:layout_height="52dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="17dp"
             android:layout_marginTop="18dp"
+            android:layout_marginEnd="17dp"
             android:ellipsize="end"
             android:fontFamily="@font/notosanscjkkr_demilight"
             android:includeFontPadding="false"
