--- a/app/src/main/res/layout/activity_privacy_terms.xml
+++ b/app/src/main/res/layout/activity_privacy_terms.xml
@@ -25,6 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="28dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -258,7 +259,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/activity_privacy_terms_sv"
+        app:layout_constraintTop_toBottomOf="@+id/activity_privacy_terms_btn_back"
         app:srcCompat="@drawable/my_settings_service_box_blur_top" />
 
     <ImageView
