[Implement Features] 스플래쉬, 큐레이터탭 수정

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,10 +7,11 @@
     android:background="#fbfbfb"
     tools:context=".activity.SplashActivity">
 
-    <ImageView
+    <pl.droidsonroids.gif.GifImageView
         android:id="@+id/img_splash_gif"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:src="@drawable/splash"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
