--- a/app/src/main/res/layout/fragment_curator.xml
+++ b/app/src/main/res/layout/fragment_curator.xml
@@ -304,7 +304,7 @@
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:maxLines="2"
-                    android:text="흔들리는 꽃들 속에서 네 샴푸향이 느껴진거야 스쳐 지나간건가 뒤돌아보는 문장 "
+                    android:text=" "
                     android:textColor="#ffffff"
                     android:textSize="19sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView30"
@@ -335,7 +335,7 @@
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="-1sp"
-                    android:text="53"
+                    android:text="0"
                     android:textColor="#ffffff"
                     android:textSize="16sp"
                     app:layout_constraintStart_toEndOf="@+id/textView30"
@@ -401,7 +401,7 @@
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:maxLines="2"
-                    android:text="마음 속 장마를 막아줄 우산 같은 문장"
+                    android:text=" "
                     android:textColor="#ffffff"
                     android:textSize="19sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView32"
@@ -432,7 +432,7 @@
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="-1sp"
-                    android:text="53"
+                    android:text="0"
                     android:textColor="#ffffff"
                     android:textSize="16sp"
                     app:layout_constraintStart_toEndOf="@+id/textView32"
