--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,24 @@
     </FrameLayout>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/main_activity_FAB_tm"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_above="@+id/main_activity_FAB_main"
+        android:background="@drawable/fab_sub"
+        android:backgroundTint="@color/white"
+        android:text=" 테마 만들기"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:textSize="16dp"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/main_activity_FAB_main"
+        android:visibility="visible"/>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/main_activity_FAB_st"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
@@ -58,7 +76,7 @@
         android:background="@drawable/fab_sub"
         android:backgroundTint="@color/white"
         android:text=" 문장 쓰기"
-        android:textSize="16sp"
+        android:textSize="16dp"
         app:borderWidth="0dp"
         android:gravity="center"
         app:fabSize="normal"
@@ -69,22 +87,7 @@
         android:visibility="visible"/>
 
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/main_activity_FAB_tm"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_above="@+id/main_activity_FAB_main"
-        android:background="@drawable/fab_sub"
-        android:backgroundTint="@color/white"
-        android:text=" 테마 만들기"
-        android:textSize="16sp"
-        app:fabSize="normal"
-        android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/main_activity_FAB_main"
-        android:visibility="visible"/>
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/main_activity_FAB_main"
