--- a/app/src/main/res/layout/writing_theme_finish.xml
+++ b/app/src/main/res/layout/writing_theme_finish.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:text="테마가 등록되었습니다!"
         android:layout_marginTop="351dp"
-        android:textSize="19sp"
+        android:textSize="19dp"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:gravity="center"
         android:text="최대 140자까지 입력 가능하며, 책의 문장을\n
 임의로 변형하지 않게 주의해주세요!"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="@color/very_light_pink_two"
         android:layout_marginTop="389dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,8 @@
         android:gravity="center"
         android:text="이 테마에 문장 쓰러가기"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="16dp"
+        android:textAlignment="center"
         android:layout_marginTop="483dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="@id/gl_right"
@@ -75,7 +76,8 @@
         android:gravity="center"
         android:text="메인으로 돌아가기"
         android:textColor="@color/soft_green"
-        android:textSize="16sp"
+        android:textSize="16dp"
+        android:textAlignment="center"
         android:layout_marginTop="542dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="@id/gl_right"
