--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!--
     Because the window insets on round devices are larger than 15dp, this padding only applies
     to square screens.
@@ -12,4 +12,7 @@
     inner_frame_layout_padding (below variable) on round screens.
     -->
     <dimen name="inner_frame_layout_padding">5dp</dimen>
+
+    <dimen name="design_fab_size_normal" tools:override="true">58dp</dimen>
+    <dimen name="design_fab_image_size" tools:override="true">40dp</dimen>
 </resources>
